# close-api-scripts

./: CLAUDE.md  README.md  main.py  pyproject.toml
scripts/: CloseApiWrapper.py  ZendeskApiWrapper.py  assign_leads_from_deal_users.py  change_workflow_call_assignee.py  check_synced_appointments.py  create_lead_qualification_and_opportunity.py  create_receptionist_notes.py  csv_to_cio.py  delete_duplicate_contact_details.py  delete_duplicate_custom_activity_instances.py  delete_incomplete_tasks.py  delete_leads.py  delete_opportunities_in_status.py  enroll_lead_in_follow-up_workflow.py  export_custom_activity_instances.py  export_refunded_opportunities.py  import_leads_from_csv.py  link_custom_activities_and_opportunities.py  link_stripe_payments_to_close_opportunities.py  mark_stale_opportunities_as_lost.py  merge_opportunity_statuses.py  re-enroll_contacts_in_workflows.py  reassign_or_delete_opportunities.py  remove_opportunity_notes.py  replace_lost_opportunity_with_lead_qualification.py  restore_deleted_tasks.py  sync_calltrackingmetrics_to_bigquery.py  sync_calltrackingmetrics_to_close.py  sync_healthie_user_ids.py  sync_zendesk_leads.py  sync_zendesk_line_items.py  sync_zendesk_records_to_close.py  sync_zendesk_secondary_emails.py  toggle_opportunity_discounts.py  toggle_webhook_subscription.py  update_custom_field_value.py  update_lead_status.py  update_note_users.py  update_opportunity_field_value.py  update_template_and_workflow_prefix.py  (+2 more)
scripts/utils/: csv.py  get_api_key.py
