[project]
name = "close-api-scripts"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiohttp>=3.11.12",
    "basecrm>=1.2.9",
    "closeio>=2.1",
    "gevent>=24.11.1",
    "requests>=2.32.3",
]

[tool.black]
skip-string-normalization = true
target-version = ['py37']
line-length = 79
exclude = '''
/(
    \.git
  | \.venv
  | venv
)/
'''
