[project]
name = "close-api-scripts"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiohttp>=3.11.12",
    "basecrm>=1.2.9",
    "closeio>=2.1",
    "gevent>=24.11.1",
    "requests>=2.32.3",
]

[tool.ruff]
exclude = [
    ".git",
    ".venv",
    "venv",
]
line-length = 88
target-version = "py313"

[tool.ruff.format]
quote-style = "preserve"
